The sort2 command doe snot take --verbose.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -190,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2 --verbose $VERBOSE",
+    "!$kgtk sort2",
     " -i $TEMP/property.datatype.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/property.datatype.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -204,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2 --verbose $VERBOSE",
+    "!$kgtk sort2",
     " -i $TEMP/part.alias.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.alias.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -232,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2 --verbose $VERBOSE",
+    "!$kgtk sort2",
     " -i $TEMP/part.description.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.description.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -260,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2 --verbose $VERBOSE",
+    "!$kgtk sort2",
     " -i $TEMP/part.label.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.label.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2 --verbose $VERBOSE",
+    "!$kgtk sort2",
     " -i $TEMP/part.wikipedia_sitelink.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.wikipedia_sitelink.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -316,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2 --verbose $VERBOSE",
+    "!$kgtk sort2",
     " -i $TEMP/types.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/types.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -330,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2 --verbose $VERBOSE",
+    "!$kgtk sort2",
     " -i $TEMP/part.qual.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -344,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2 --verbose $VERBOSE",
+    "!$kgtk sort2",
     " -i $TEMP/part.claims.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.claims.$SORTED_EXTENSION",
     " --gzip-command $gzip",
