Add the verbose flag back for kgtk sort2.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose $VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE --regex",
     " --first-match-only",
     " --use-mgzip $USE_MGZIP",
     " -i $WIKIDATA_INPUT",
@@ -190,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2",
+    "!$kgtk sort2 --verbose=$VERBOSE",
     " -i $TEMP/property.datatype.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/property.datatype.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -204,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2",
+    "!$kgtk sort2 --verbose=$VERBOSE",
     " -i $TEMP/part.alias.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.alias.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -218,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose $VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE --regex",
     " --use-mgzip $USE_MGZIP",
     " --subj lang",
     " -i $WIKIDATA_PARTS/part.alias.$SORTED_EXTENSION",
@@ -232,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2",
+    "!$kgtk sort2 --verbose=$VERBOSE",
     " -i $TEMP/part.description.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.description.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose $VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE --regex",
     " --use-mgzip $USE_MGZIP",
     " --subj lang",
     " -i $WIKIDATA_PARTS/part.description.$SORTED_EXTENSION",
@@ -260,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2",
+    "!$kgtk sort2 --verbose=$VERBOSE",
     " -i $TEMP/part.label.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.label.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -274,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose $VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE --regex",
     " --use-mgzip $USE_MGZIP",
     " --subj lang",
     " -i $WIKIDATA_PARTS/part.label.$SORTED_EXTENSION",
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2",
+    "!$kgtk sort2 --verbose=$VERBOSE",
     " -i $TEMP/part.wikipedia_sitelink.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.wikipedia_sitelink.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -302,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose $VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE --regex",
     " --use-mgzip $USE_MGZIP",
     " --subj lang",
     " -i $WIKIDATA_PARTS/part.wikipedia_sitelink.$SORTED_EXTENSION",
@@ -316,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2",
+    "!$kgtk sort2 --verbose=$VERBOSE",
     " -i $TEMP/types.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/types.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -330,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2",
+    "!$kgtk sort2 --verbose=$VERBOSE",
     " -i $TEMP/part.qual.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -344,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk sort2",
+    "!$kgtk sort2 --verbose=$VERBOSE",
     " -i $TEMP/part.claims.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.claims.$SORTED_EXTENSION",
     " --gzip-command $gzip",
@@ -358,7 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk unique --verbose $VERBOSE --format node-only",
+    "!$kgtk unique --verbose=$VERBOSE --format node-only",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.claims.$SORTED_EXTENSION",
     " --output-file $WIKIDATA_PARTS/part.claims.entities.$SORTED_EXTENSION", 
@@ -372,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk unique --verbose $VERBOSE",
+    "!$kgtk unique --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.claims.$SORTED_EXTENSION",
     " --output-file $WIKIDATA_PARTS/part.claims.datatypes.$SORTED_EXTENSION", 
@@ -386,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose $VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE --regex",
     " --use-mgzip $USE_MGZIP",
     " --obj 'node2;wikidatatype'",
     " -i $WIKIDATA_PARTS/part.claims.$SORTED_EXTENSION",
@@ -415,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.commonsMedia.$SORTED_EXTENSION",
@@ -432,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.external-id.$SORTED_EXTENSION",
@@ -449,7 +449,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.geo-shape.$SORTED_EXTENSION",
@@ -466,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.globe-coordinate.$SORTED_EXTENSION",
@@ -483,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.math.$SORTED_EXTENSION",
@@ -500,7 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.monolingualtext.$SORTED_EXTENSION",
@@ -517,7 +517,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.musical-notation.$SORTED_EXTENSION",
@@ -534,7 +534,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.quantity.$SORTED_EXTENSION",
@@ -551,7 +551,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.string.$SORTED_EXTENSION",
@@ -568,7 +568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.tabular-data.$SORTED_EXTENSION",
@@ -585,7 +585,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.time.$SORTED_EXTENSION",
@@ -602,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.url.$SORTED_EXTENSION",
@@ -619,7 +619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.wikibase-form.$SORTED_EXTENSION",
@@ -636,7 +636,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.wikibase-item.$SORTED_EXTENSION",
@@ -653,7 +653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.wikibase-lexeme.$SORTED_EXTENSION",
@@ -670,7 +670,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.wikibase-property.$SORTED_EXTENSION",
@@ -687,7 +687,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.wikibase-sense.$SORTED_EXTENSION",
@@ -704,7 +704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose $VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE --regex",
     " --use-mgzip $USE_MGZIP",
     " -i $WIKIDATA_PARTS/part.claims.$SORTED_EXTENSION",
     " -p '^P ;;' -o $WIKIDATA_PARTS/part.property.$SORTED_EXTENSION",
@@ -717,7 +717,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose $VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE --regex",
     " --use-mgzip $USE_MGZIP",
     " -i $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
     " -p '^P ;;' -o $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
@@ -730,7 +730,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk unique --verbose $VERBOSE",
+    "!$kgtk unique --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.$SORTED_EXTENSION",
     " --output-file $WIKIDATA_PARTS/part.property.datatypes.$SORTED_EXTENSION", 
@@ -744,7 +744,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk unique --verbose $VERBOSE",
+    "!$kgtk unique --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.$SORTED_EXTENSION",
     " --output-file $WIKIDATA_PARTS/part.property.counts.$SORTED_EXTENSION", 
@@ -759,7 +759,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk lift --verbose $VERBOSE",
+    "!$kgtk lift --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.counts.$SORTED_EXTENSION",
     " --input-file  $WIKIDATA_PARTS/part.label.en.$SORTED_EXTENSION",
@@ -775,7 +775,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose $VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE --regex",
     " --use-mgzip $USE_MGZIP",
     " --obj 'node2;wikidatatype'",
     " -i $WIKIDATA_PARTS/part.property.$SORTED_EXTENSION",
@@ -804,7 +804,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.commonsMedia.$SORTED_EXTENSION",
@@ -821,7 +821,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.external-id.$SORTED_EXTENSION",
@@ -838,7 +838,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.geo-shape.$SORTED_EXTENSION",
@@ -855,7 +855,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.globe-coordinate.$SORTED_EXTENSION",
@@ -872,7 +872,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.math.$SORTED_EXTENSION",
@@ -889,7 +889,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.monolingualtext.$SORTED_EXTENSION",
@@ -906,7 +906,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.musical-notation.$SORTED_EXTENSION",
@@ -923,7 +923,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.quantity.$SORTED_EXTENSION",
@@ -940,7 +940,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.string.$SORTED_EXTENSION",
@@ -957,7 +957,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.tabular-data.$SORTED_EXTENSION",
@@ -974,7 +974,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.time.$SORTED_EXTENSION",
@@ -991,7 +991,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.url.$SORTED_EXTENSION",
@@ -1008,7 +1008,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.wikibase-form.$SORTED_EXTENSION",
@@ -1025,7 +1025,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.wikibase-item.$SORTED_EXTENSION",
@@ -1042,7 +1042,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.wikibase-lexeme.$SORTED_EXTENSION",
@@ -1059,7 +1059,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.wikibase-property.$SORTED_EXTENSION",
@@ -1076,7 +1076,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose $VERBOSE",
+    "!$kgtk ifexists --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
     " --filter-on   $WIKIDATA_PARTS/part.property.wikibase-sense.$SORTED_EXTENSION",
