Change verbose and use_mgzip defaults for now.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -30,8 +30,8 @@
     "- `sort_extras`: Extra parameters for the sort program. \n",
     "- `unsorted_extension`: The file extension for unsorted files. (default: .unsorted.tsv.gz) \n",
     "- `sorted_extension`: The file extension for sorted files. (default: .tsv.gz)  \n",
-    "- `use_mgzip`: When True, use the mgzip program where appropriate for faster compression. (default: False) \n",
-    "- `verbose`: When True, see additional feedback messages. (default: False) \n"
+    "- `use_mgzip`: When True, use the mgzip program where appropriate for faster compression. (default: True) \n",
+    "- `verbose`: When True, see additional feedback messages. (default: True) \n"
    ]
   },
   {
@@ -53,7 +53,7 @@
     "unsorted_extension = 'unsorted.tsv.gz'\n",
     "sorted_extension = 'tsv.gz'\n",
     "use_mgzip = 'False'\n",
-    "verbose = 'False'\n"
+    "verbose = 'True'\n"
    ]
   },
   {
