add more options, filter englidh only

--- a/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
+++ b/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
@@ -16,7 +16,10 @@
     "-p inf /Users/amandeep/Github/kgtk/data/statements/valid_edges.tsv \\\n",
     "-p out_folder /Users/amandeep/Github/kgtk/data/statements/output \\\n",
     "-p out_file valid_lad.tsv \\\n",
-    "-p delete_database no\n",
+    "-p delete_database no \\\n",
+    "-p run_node1 yes \\\n",
+    "-p run_property yes \\\n",
+    "-p run_node2 yes\n",
     "```\n",
     "\n",
     "To print a help message and exit:\n",
@@ -49,7 +52,14 @@
     "# output file name\n",
     "out_file:str='valid_lad.tsv'\n",
     "# delete previous database\n",
-    "delete_database:str = 'no'"
+    "delete_database:str = 'no'\n",
+    "# find labels, aliases and descriptions for node1\n",
+    "run_node1:str='yes'\n",
+    "# find labels, aliases and descriptions for property\n",
+    "run_property:str='yes'\n",
+    "# find labels, aliases and descriptions for node2\n",
+    "run_node2:str='yes'\n",
+    "    "
    ]
   },
   {
@@ -214,10 +224,12 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/node1_labels.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: (n1)-[]->(), WIKI_LABEL_NAME: (n1)-[l:label]->(n2)' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
     "            --return 'distinct n1 as node1, l.label, n2' \\\n",
     "            --order-by 'n1, l.label, n2'\"\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
-    "!$cmd"
+    "if run_node1 and run_node1.lower() == 'yes':\n",
+    "    !$cmd"
    ]
   },
   {
@@ -259,9 +271,11 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/node1_aliases.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: (n1)-[]->(), WIKI_ALIAS_NAME: (n1)-[l:alias]->(n2)' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
     "            --return 'distinct n1 as node1, l.label, n2' --order-by 'n1, l.label, n2'\"\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
-    "!$cmd"
+    "if run_node1 and run_node1.lower() == 'yes':\n",
+    "    !$cmd"
    ]
   },
   {
@@ -309,10 +323,12 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/node1_descriptions.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: (n1)-[]->(), WIKI_DESCRIPTION_NAME: (n1)-[l:description]->(n2)' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
     "            --return 'distinct n1 as node1, l.label, n2' --order-by 'n1, l.label, n2'\"\n",
     "\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
-    "!$cmd"
+    "if run_node1 and run_node1.lower() == 'yes':\n",
+    "    !$cmd"
    ]
   },
   {
@@ -357,10 +373,13 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/node2_labels.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: ()-[]->(n1), WIKI_LABEL_NAME: (n1)-[l:label]->(n2)' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
     "            --return 'distinct n1 as node1, l.label, n2' --order-by 'n1, l.label, n2'\"\n",
     "\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
-    "!$cmd"
+    "\n",
+    "if run_node2 and run_node2.lower() == 'yes':\n",
+    "    !$cmd"
    ]
   },
   {
@@ -408,10 +427,12 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/node2_aliases.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: ()-[]->(n1), WIKI_ALIAS_NAME: (n1)-[l:alias]->(n2)' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
     "            --return 'distinct n1 as node1, l.label, n2' --order-by 'n1, l.label, n2'\"\n",
     "\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
-    "!$cmd"
+    "if run_node2 and run_node2.lower() == 'yes':\n",
+    "    !$cmd"
    ]
   },
   {
@@ -454,10 +475,12 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/node2_descriptions.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: ()-[]->(n1), WIKI_DESCRIPTION_NAME: (n1)-[l:description]->(n2)' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
     "            --return 'distinct n1 as node1, l.label, n2' --order-by 'n1, l.label, n2'\"\n",
     "\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
-    "!$cmd"
+    "if run_node2 and run_node2.lower() == 'yes':\n",
+    "    !$cmd"
    ]
   },
   {
@@ -503,11 +526,13 @@
     "               --graph-cache $STORE \\\n",
     "               -o $temp/property_labels.tsv \\\n",
     "               --match 'INPUT_FILE_NAME: ()-[id {label: prop}]->(), WIKI_LABEL_NAME: (prop)-[l:label]->(n2)' \\\n",
+    "               --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
     "               --return 'distinct prop as node1, l.label, n2' \\\n",
     "               --order-by 'prop, l.label, n2'\"\n",
     "\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
-    "!$cmd"
+    "if run_property and run_property.lower() == 'yes':\n",
+    "    !$cmd"
    ]
   },
   {
@@ -551,10 +576,12 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/property_aliases.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: ()-[id {label: prop}]->(), WIKI_ALIAS_NAME: (prop)-[l:alias]->(n2)' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
     "            --return 'distinct prop as node1, l.label, n2' \\\n",
     "            --order-by 'prop, l.label, n2'\"\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
-    "!$cmd"
+    "if run_property and run_property.lower() == 'yes':\n",
+    "    !$cmd"
    ]
   },
   {
@@ -598,11 +625,13 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/property_descriptions.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: ()-[id {label: prop}]->(), WIKI_DESCRIPTION_NAME: (prop)-[l:description]->(n2)' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
     "            --return 'distinct prop as node1, l.label, n2' \\\n",
     "            --order-by 'prop, l.label, n2'\"\n",
     "\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
-    "!$cmd"
+    "if run_property and run_property.lower() == 'yes':\n",
+    "    !$cmd"
    ]
   },
   {
@@ -618,9 +647,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kgtk cat -i $temp/node1_labels.tsv $temp/node1_aliases.tsv $temp/node1_descriptions.tsv \\\n",
-    "    $temp/node2_labels.tsv $temp/node2_aliases.tsv $temp/node2_descriptions.tsv \\\n",
-    "    $temp/property_labels.tsv $temp/property_aliases.tsv $temp/property_descriptions.tsv \\\n",
+    "file_list = []\n",
+    "if run_node1 and run_node1.lower() == 'yes':\n",
+    "    file_list.append($temp/node1_labels.tsv)\n",
+    "    file_list.append($temp/node1_aliases.tsv)\n",
+    "    file_list.append($temp/node1_descriptions.tsv)\n",
+    "\n",
+    "if run_node2 and run_node2.lower() == 'yes':\n",
+    "    file_list.append($temp/node2_labels.tsv)\n",
+    "    file_list.append($temp/node2_aliases.tsv)\n",
+    "    file_list.append($temp/node2_descriptions.tsv)\n",
+    "\n",
+    "if run_property and run_property.lower() == 'yes':\n",
+    "    file_list.append($temp/property_labels.tsv)\n",
+    "    file_list.append($temp/property_aliases.tsv)\n",
+    "    file_list($temp/property_descriptions.tsv)\n",
+    "\n",
+    "!kgtk cat -i  ' '.join(file_list) \\\n",
     "    > $temp/all_labels_aliases_descriptions_duplicates.tsv"
    ]
   },
