--- a/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
+++ b/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
@@ -224,7 +224,7 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/node1_labels.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: (n1)-[]->(), WIKI_LABEL_NAME: (n1)-[l:label]->(n2)' \\\n",
-    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \\\"en\\\"' \\\n",
     "            --return 'distinct n1 as node1, l.label, n2' \\\n",
     "            --order-by 'n1, l.label, n2'\"\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
@@ -271,7 +271,7 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/node1_aliases.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: (n1)-[]->(), WIKI_ALIAS_NAME: (n1)-[l:alias]->(n2)' \\\n",
-    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \\\"en\\\"' \\\n",
     "            --return 'distinct n1 as node1, l.label, n2' --order-by 'n1, l.label, n2'\"\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
     "if run_node1 and run_node1.lower() == 'yes':\n",
@@ -323,7 +323,7 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/node1_descriptions.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: (n1)-[]->(), WIKI_DESCRIPTION_NAME: (n1)-[l:description]->(n2)' \\\n",
-    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \\\"en\\\"' \\\n",
     "            --return 'distinct n1 as node1, l.label, n2' --order-by 'n1, l.label, n2'\"\n",
     "\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
@@ -373,7 +373,7 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/node2_labels.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: ()-[]->(n1), WIKI_LABEL_NAME: (n1)-[l:label]->(n2)' \\\n",
-    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \\\"en\\\"' \\\n",
     "            --return 'distinct n1 as node1, l.label, n2' --order-by 'n1, l.label, n2'\"\n",
     "\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
@@ -427,7 +427,7 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/node2_aliases.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: ()-[]->(n1), WIKI_ALIAS_NAME: (n1)-[l:alias]->(n2)' \\\n",
-    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \\\"en\\\"' \\\n",
     "            --return 'distinct n1 as node1, l.label, n2' --order-by 'n1, l.label, n2'\"\n",
     "\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
@@ -475,7 +475,7 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/node2_descriptions.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: ()-[]->(n1), WIKI_DESCRIPTION_NAME: (n1)-[l:description]->(n2)' \\\n",
-    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \\\"en\\\"' \\\n",
     "            --return 'distinct n1 as node1, l.label, n2' --order-by 'n1, l.label, n2'\"\n",
     "\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
@@ -526,7 +526,7 @@
     "               --graph-cache $STORE \\\n",
     "               -o $temp/property_labels.tsv \\\n",
     "               --match 'INPUT_FILE_NAME: ()-[id {label: prop}]->(), WIKI_LABEL_NAME: (prop)-[l:label]->(n2)' \\\n",
-    "               --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
+    "               --where 'n2.kgtk_lqstring_lang_suffix = \\\"en\\\"' \\\n",
     "               --return 'distinct prop as node1, l.label, n2' \\\n",
     "               --order-by 'prop, l.label, n2'\"\n",
     "\n",
@@ -576,7 +576,7 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/property_aliases.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: ()-[id {label: prop}]->(), WIKI_ALIAS_NAME: (prop)-[l:alias]->(n2)' \\\n",
-    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \\\"en\\\"' \\\n",
     "            --return 'distinct prop as node1, l.label, n2' \\\n",
     "            --order-by 'prop, l.label, n2'\"\n",
     "cmd = format_command(command, substitution_dictionary=replace_dict)\n",
@@ -625,7 +625,7 @@
     "            --graph-cache $STORE \\\n",
     "            -o $temp/property_descriptions.tsv \\\n",
     "            --match 'INPUT_FILE_NAME: ()-[id {label: prop}]->(), WIKI_DESCRIPTION_NAME: (prop)-[l:description]->(n2)' \\\n",
-    "            --where 'n2.kgtk_lqstring_lang_suffix = \"en\"' \\\n",
+    "            --where 'n2.kgtk_lqstring_lang_suffix = \\\"en\\\"' \\\n",
     "            --return 'distinct prop as node1, l.label, n2' \\\n",
     "            --order-by 'prop, l.label, n2'\"\n",
     "\n",
