--- a/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
+++ b/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
@@ -649,19 +649,19 @@
    "source": [
     "file_list = []\n",
     "if run_node1 and run_node1.lower() == 'yes':\n",
-    "    file_list.append($temp/node1_labels.tsv)\n",
-    "    file_list.append($temp/node1_aliases.tsv)\n",
-    "    file_list.append($temp/node1_descriptions.tsv)\n",
+    "    file_list.append('{}/node1_labels.tsv'.format(os.environ['temp']))\n",
+    "    file_list.append('{}/node1_aliases.tsv'.format(os.environ['temp']))\n",
+    "    file_list.append('{}/node1_descriptions.tsv'.format(os.environ['temp']))\n",
     "\n",
     "if run_node2 and run_node2.lower() == 'yes':\n",
-    "    file_list.append($temp/node2_labels.tsv)\n",
-    "    file_list.append($temp/node2_aliases.tsv)\n",
-    "    file_list.append($temp/node2_descriptions.tsv)\n",
+    "    file_list.append('{}/node2_labels.tsv'.format(os.environ['temp']))\n",
+    "    file_list.append('{}/node2_aliases.tsv'.format(os.environ['temp']))\n",
+    "    file_list.append('{}/node2_descriptions.tsv'.format(os.environ['temp']))\n",
     "\n",
     "if run_property and run_property.lower() == 'yes':\n",
-    "    file_list.append($temp/property_labels.tsv)\n",
-    "    file_list.append($temp/property_aliases.tsv)\n",
-    "    file_list($temp/property_descriptions.tsv)\n",
+    "    file_list.append('{}/property_labels.tsv'.format(os.environ['temp']))\n",
+    "    file_list.append('{}/property_aliases.tsv'.format(os.environ['temp']))\n",
+    "    file_list('{}/property_descriptions.tsv'.format(os.environ['temp']))\n",
     "\n",
     "!kgtk cat -i  ' '.join(file_list) \\\n",
     "    > $temp/all_labels_aliases_descriptions_duplicates.tsv"
