--- a/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
+++ b/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
@@ -663,9 +663,9 @@
     "    file_list.append('{}/property_aliases.tsv'.format(os.environ['temp']))\n",
     "    file_list.append('{}/property_descriptions.tsv'.format(os.environ['temp']))\n",
     "\n",
-    "print(file_list)\n",
-    "!kgtk cat -i  ' '.join(file_list).strip() \\\n",
-    "    > $temp/all_labels_aliases_descriptions_duplicates.tsv"
+    "f_list = ' '.join(file_list).strip()\n",
+    "print(f_list)\n",
+    "!kgtk cat -i  $f_list -o $temp/all_labels_aliases_descriptions_duplicates.tsv"
    ]
   },
   {
