Fix the language filters.  There were cut-and-paste errors.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -220,9 +220,9 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --regex",
     " --use-mgzip $USE_MGZIP",
-    " --subj lang",
+    " --obj lang",
     " -i $WIKIDATA_PARTS/part.alias.$SORTED_EXTENSION",
-    " -p '^en$ ; ^alias$ ;$' -o $WIKIDATA_PARTS/part.alias.en.$SORTED_EXTENSION",
+    " -p ';; ^en$' -o $WIKIDATA_PARTS/part.alias.en.$SORTED_EXTENSION",
     ""
    ]
   },
@@ -248,9 +248,9 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --regex",
     " --use-mgzip $USE_MGZIP",
-    " --subj lang",
+    " --obj lang",
     " -i $WIKIDATA_PARTS/part.description.$SORTED_EXTENSION",
-    " -p '^en$ ; ^alias$ ;$' -o $WIKIDATA_PARTS/part.description.en.$SORTED_EXTENSION",
+    " -p ';; ^en$' -o $WIKIDATA_PARTS/part.description.en.$SORTED_EXTENSION",
     ""
    ]
   },
@@ -276,9 +276,9 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --regex",
     " --use-mgzip $USE_MGZIP",
-    " --subj lang",
+    " --obj lang",
     " -i $WIKIDATA_PARTS/part.label.$SORTED_EXTENSION",
-    " -p '^en$ ; ^alias$ ;$' -o $WIKIDATA_PARTS/part.label.en.$SORTED_EXTENSION",
+    " -p ';; ^en$' -o $WIKIDATA_PARTS/part.label.en.$SORTED_EXTENSION",
     ""
    ]
   },
@@ -304,9 +304,9 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --regex",
     " --use-mgzip $USE_MGZIP",
-    " --subj lang",
+    " --obj lang",
     " -i $WIKIDATA_PARTS/part.wikipedia_sitelink.$SORTED_EXTENSION",
-    " -p '^en$ ; ^alias$ ;$' -o $WIKIDATA_PARTS/part.wikipedia_sitelink.en.$SORTED_EXTENSION",
+    " -p ';; ^en$' -o $WIKIDATA_PARTS/part.wikipedia_sitelink.en.$SORTED_EXTENSION",
     ""
    ]
   },
