kgtk cat with input

--- a/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
+++ b/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
@@ -665,7 +665,7 @@
     "\n",
     "f_list = ' '.join(file_list).strip()\n",
     "print(f_list)\n",
-    "!kgtk cat -i  $f_list -o $temp/all_labels_aliases_descriptions_duplicates.tsv"
+    "!kgtk cat -i f_list -o $temp/all_labels_aliases_descriptions_duplicates.tsv"
    ]
   },
   {
