Since we are using the lang column, language filters dont need to be regexes.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -218,11 +218,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose=$VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --obj lang",
     " -i $WIKIDATA_PARTS/part.alias.$SORTED_EXTENSION",
-    " -p ';; ^en$' -o $WIKIDATA_PARTS/part.alias.en.$SORTED_EXTENSION",
+    " -p ';; en' -o $WIKIDATA_PARTS/part.alias.en.$SORTED_EXTENSION",
     ""
    ]
   },
@@ -246,11 +246,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose=$VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --obj lang",
     " -i $WIKIDATA_PARTS/part.description.$SORTED_EXTENSION",
-    " -p ';; ^en$' -o $WIKIDATA_PARTS/part.description.en.$SORTED_EXTENSION",
+    " -p ';; en' -o $WIKIDATA_PARTS/part.description.en.$SORTED_EXTENSION",
     ""
    ]
   },
@@ -274,11 +274,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose=$VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --obj lang",
     " -i $WIKIDATA_PARTS/part.label.$SORTED_EXTENSION",
-    " -p ';; ^en$' -o $WIKIDATA_PARTS/part.label.en.$SORTED_EXTENSION",
+    " -p ';; en' -o $WIKIDATA_PARTS/part.label.en.$SORTED_EXTENSION",
     ""
    ]
   },
@@ -302,11 +302,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose=$VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --obj lang",
     " -i $WIKIDATA_PARTS/part.wikipedia_sitelink.$SORTED_EXTENSION",
-    " -p ';; ^en$' -o $WIKIDATA_PARTS/part.wikipedia_sitelink.en.$SORTED_EXTENSION",
+    " -p ';; en' -o $WIKIDATA_PARTS/part.wikipedia_sitelink.en.$SORTED_EXTENSION",
     ""
    ]
   },
